src/styles/partials/_landingHeader.scss
.landingheader {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background: url(../assets/landing_header.svg);
  background-color: $primary;
  background-size: contain;
  height: 24.4375rem;
  width: 100%;

  cursor: default;

  ::-webkit-scrollbar {
    width: 0.375rem;
  }

  ::-webkit-scrollbar-track {
    background: $scroll-primary;
  }

  ::-webkit-scrollbar-thumb {
    background: $scroll-secondary;
    border-radius: 2.9375rem;
  }
}

.landingheader-- {
  &logo_sds {
    margin-top: 2.280625rem;
    margin-left: 8.375rem;
  }

  &main {
    display: flex;
    flex-direction: column;
    width: 50%;
    align-items: center;
  }

  &logo {
    margin-top: 4.575rem;
  }

  &heading {
    margin-top: 0.888125rem;
    width: 11.625rem;
    height: 2.25rem;
    font-family: $font-header;
    font-style: normal;
    font-weight: bold;
    font-size: 2rem;
    line-height: 2.25rem;
    text-align: center;
    color: $font-color;
    white-space: nowrap;
  }

  &caption {
    margin-top: 0.9375rem;
    font-family: $font;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 21px;
    color: #28607e;
  }

  &search {
    display: flex;
    flex-direction: row;
    margin-top: 1.25rem;
    width: 70%;
    border-radius: 0.25rem;
  }

  &user_loggedin {
    display: flex;
    padding-left: 1.375rem;
    padding-right: 4rem;
  }

  &mycourses {
    margin-top: 2.25rem;
    margin-right: 7rem;
    z-index: 2;
  }

  &notifications {
    margin-top: 2.65rem;
    margin-left: -22.125rem;
  }

  &user_nologin {
    display: flex;
    margin-top: 2.25rem;
    margin-left: -8.575rem;
    margin-right: 8.375rem;
  }

  &user {
    margin-top: 2.15rem;
  }

  &login {
    @include font;
    width: 5.25rem;
    height: 2.5625rem;
    color: $secondary;
    background: transparent;
    border: none;
  }

  &signup {
    @include font;
    width: 4.99625rem;
    height: 2.5625rem;
    color: $font-color;
    border-radius: 0.125rem;
    border: 0.0625rem solid $font-color;
    background: transparent;
  }

  &image {
    width: 3.5rem;
    height: 3.5rem;
    color: $secondary;
  }

  &search:hover,
  &request:hover,
  &upload:hover,
  &login:hover,
  &signup:hover &image:hover {
    cursor: pointer;
  }

  &search:focus,
  &login:focus,
  &signup:focus {
    outline: none;
  }
}

